--- a/web/src/components/_HeroPage.scss
+++ b/web/src/components/_HeroPage.scss
@@ -30,14 +30,14 @@
     }
 
     &__title {
-        font-size: 2rem;
+        font-size: 2em;
         margin-top: 1rem;
         font-family: system;
         line-height: 2.5rem;
     }
 
     &__subtitle {
-        font-size: 0.875rem;
+        font-size: 0.875em;
         line-height: 1rem;
         margin-top: 1rem;
     }
