--- a/web/src/references/_ReferencesWidget.scss
+++ b/web/src/references/_ReferencesWidget.scss
@@ -22,7 +22,7 @@
 
         &-title {
             max-width: 50%;
-            margin-right: 25px;
+            margin-right: 1.5rem;
         }
 
         &-group {
@@ -73,7 +73,7 @@
     }
 
     &__placeholder {
-        padding: 10px 16px;
+        padding: 0.5rem 1rem;
     }
 
     &__groups {
