--- a/web/src/search2/_Help.scss
+++ b/web/src/search2/_Help.scss
@@ -1,7 +1,8 @@
 .search2-help {
     display: flex;
-    font-size: 0.8rem;
+    font-size: 0.8em;
     align-items: center;
+
     .icon-help {
         flex: 0 0 auto;
         width: 1rem;
