--- a/web/src/search2/_SearchResults.scss
+++ b/web/src/search2/_SearchResults.scss
@@ -4,12 +4,11 @@
 
 .search-results2 {
     width: 100%;
-    padding-top: 0.5em;
+    padding-top: 0.5rem;
 
     &__header {
         color: #93a9c8;
-        margin-bottom: 0.125rem;
+        margin-bottom: 0.5rem;
         text-align: right;
-        font-size: 0.75rem;
     }
 }
