--- a/web/src/settings/_SettingsPage.scss
+++ b/web/src/settings/_SettingsPage.scss
@@ -8,7 +8,7 @@
 .settings-page {
     flex: 1 1 auto;
     display: flex;
-    margin-top: 1em;
+    margin-top: 1rem;
     line-height: 1.5rem;
     overflow: hidden;
     border-radius: 0.25rem;
