--- a/web/src/comments/_CommentsPage.scss
+++ b/web/src/comments/_CommentsPage.scss
@@ -23,18 +23,21 @@
         background: #1d2837;
         display: flex;
         padding: 0.5rem;
-        font-size: 0.75rem;
+        font-size: 0.75em;
         height: 2rem;
         flex: none;
         align-items: center;
         width: 100%;
     }
+
     &__error-icon {
         margin-right: 0.25rem;
     }
+
     &__no-shared-code-container {
         height: 0;
     }
+
     &__no-shared-code {
         padding: 1rem;
         background: #1d2837;
@@ -54,6 +57,7 @@
         margin-top: 0.5rem;
         margin-bottom: 0.5rem;
     }
+
     &__sign-in {
         display: block;
         margin: auto;
