--- a/web/src/nav/_Navbar.scss
+++ b/web/src/nav/_Navbar.scss
@@ -26,7 +26,7 @@
     &__logo-link,
     &__nav-link {
         outline: 0;
-        margin: 0px 1rem;
+        margin: 0 1rem;
         display: flex;
         width: fit-content;
         text-decoration: none;
@@ -35,10 +35,12 @@
     &__logo {
         &:hover {
             animation: spin 0.5s ease-in-out 1;
+
             @keyframes spin {
                 50% {
                     transform: rotate(180deg) scale(1.2);
                 }
+
                 100% {
                     transform: rotate(180deg) scale(1);
                 }
@@ -57,16 +59,19 @@
             width: 1.5rem;
             height: 1.5rem;
         }
+
         .navbar__search-box-container {
             width: 52rem;
         }
     }
+
     &.navbar-search2 {
         height: 4.35rem; // +.05 to avoid the search box leaking
         .navbar__logo {
             width: 2.5rem;
             height: 2.5rem;
         }
+
         .navbar__search-box-container {
             flex: 1 0;
         }
