--- a/web/src/search2/_Suggestion.scss
+++ b/web/src/search2/_Suggestion.scss
@@ -22,18 +22,21 @@
     &__title {
         margin-left: 0.25rem;
     }
+
     &__description {
         flex: 1 1 auto;
         margin-left: 0.35rem;
         opacity: 0.6;
-        font-size: 90%;
+        font-size: 0.9em;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
     }
+
     &__highlighted-query {
         color: white;
     }
+
     &__action {
         flex: 0 0 auto;
         margin-right: 0.5rem;
