web: add repo browsing page (closes #7880)

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -474,6 +474,7 @@ h1 {
 @import './auth/SignInPage';
 @import './auth/LicensePage';
 @import './repo/Repository';
+@import './repo/RepoBrowser';
 @import './repo/Tooltips';
 @import './references/ReferencesWidget';
 @import './components/CodeExcerpt';
