--- a/web/src/settings/org/_Org.scss
+++ b/web/src/settings/org/_Org.scss
@@ -1,6 +1,7 @@
 @import './InviteForm';
 @import './OrgSettingsForm';
 @import './OrgAvatar';
+@import './OrgAdmin';
 
 .org {
     &__avatar-cell {
