search: use a more dense display of results (#8144)
* search: use a more dense display of results

Prior to this change it was hard to visually scan for interesting search
results because a file that has many many matches for the query causes you to
have to scroll quite far down to find the next file.

After this change, we use a more dense display of search results matching what
is seen in Chromium's code search.

- Fully collapsing search results for a file is no longer possible. Instead,
  file results are collapsed by default, which shows only the first two matches
  in the file.
- If a file has more than two matches, the "Show N matches" button is expand
  the file so that all of its matches are visible.

Before:

![image](https://user-images.githubusercontent.com/3173176/33118043-cb81a5fa-cf27-11e7-85d3-8b6ccd150327.png)

After:

![image](https://user-images.githubusercontent.com/3173176/33117823-148de020-cf27-11e7-8dfe-c555ae5cde01.png)

After (first result expanded):

![image](https://user-images.githubusercontent.com/3173176/33117851-2b0c3afe-cf27-11e7-96fb-79e5e1f253cf.png)

* web: search2: use Chevron down/up when there is a label (so that it doesn't look like a link to another page)

--- a/web/src/search2/_ResultContainer.scss
+++ b/web/src/search2/_ResultContainer.scss
@@ -29,4 +29,8 @@
             background-color: darken($background-color, 0.05);
         }
     }
+
+    &__toggle-matches-container {
+        display: flex;
+    }
 }
