refactor nav links for search & other pages to NavLinks component
No change in behavior, just a refactor.

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -455,6 +455,7 @@ h1 {
 @import './search2/SearchPage';
 @import './search2/SearchResults';
 @import './nav/Navbar';
+@import './nav/NavLinks';
 @import './auth/PasswordResetPage';
 @import './auth/SignInPage';
 @import './auth/LicensePage';
