--- a/web/src/search2/_SearchPage.scss
+++ b/web/src/search2/_SearchPage.scss
@@ -13,33 +13,6 @@
     justify-content: flex-start;
     width: 100%;
 
-    &__nav {
-        flex: none;
-        width: 100%;
-        margin-top: 2rem;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        padding: 0 1rem;
-
-        &-link {
-            display: inline-block;
-            text-decoration: none;
-            margin-left: 1rem;
-        }
-
-        &-auth {
-            display: flex;
-            align-items: center;
-            margin: 0 1rem;
-        }
-
-        .avatar {
-            height: 2rem;
-            width: 2rem;
-        }
-    }
-
     &__logo {
         flex: 0 0 auto;
         display: flex;
@@ -69,6 +42,11 @@
 
     &__input-sub-container {
         justify-content: space-between;
+    }
+
+    .nav-links {
+        margin-top: 1rem;
+        width: 100%;
     }
 
     .query-input2__input {
