add saved queries, persisted in user or org config
Saved queries let you save a search query so you can return to it easily. Users and orgs with the `saved-queries` tag enabled will see a new "Queries" navbar link. This page supports creation, editing, and deletion of saved queries, and it shows a summary of the saved queries' result counts.

The goal of this feature is to (1) make it easy to define queries that match code patterns that you'd like to be flagged during code review in the checklist viewlet and (2) provide basic reporting functionality for engineering managers (related to (1) but even if they are not using the editor).

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -278,6 +278,19 @@ h1 {
     }
 }
 
+.btn-secondary {
+    background: $color-secondary;
+    color: $color-page-background;
+
+    &:hover:not(:disabled) {
+        background: lighten($color-secondary, 5%);
+    }
+
+    &:focus:not(:disabled) {
+        outline: lighten($color-secondary, 5%);
+    }
+}
+
 .light a,
 .light .btn-icon {
     &:hover {
@@ -451,6 +464,7 @@ h1 {
 
 @import './highlight';
 @import './search2/QueryButton';
+@import './search2/SavedQueries';
 @import './search2/SearchNavbarItem';
 @import './search2/SearchPage';
 @import './search2/SearchResults';
