support searching commit diffs with type:diff
This will remain undocumented until the perf and UX improve.

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -477,6 +477,7 @@ h1 {
 @import './repo/Tooltips';
 @import './references/ReferencesWidget';
 @import './components/CodeExcerpt';
+@import './components/DecoratedTextLines';
 @import './components/HeroPage';
 @import './settings/SettingsPage';
 @import './comments/CommentsPage';
