fix duplicate css imports

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -468,6 +468,11 @@ h1 {
 @import './search2/SearchNavbarItem';
 @import './search2/SearchPage';
 @import './search2/SearchResults';
+@import './search2/Help';
+@import './search2/QueryInput';
+@import './search2/SearchScope';
+@import './search2/ScopeLabel';
+@import './search2/SearchButton';
 @import './nav/Navbar';
 @import './nav/NavLinks';
 @import './auth/PasswordResetPage';
