show signout as button
After the previous commit made it so non-editor-beta users would still see orgs, the signout button looked weird because there was no divider between the orgs and the signout button. This makes it into a true button and adds a divider, using the same style as for the "Download Editor" button.

The two possible permutations are:

In editor beta:

![image](https://user-images.githubusercontent.com/1976/33305596-bb87a424-d3c3-11e7-9d6c-621b7fa068a7.png)

Not in editor beta:

![image](https://user-images.githubusercontent.com/1976/33305611-cbc3dcfe-d3c3-11e7-8051-7830a1392a7c.png)

--- a/web/src/settings/_SettingsSidebar.scss
+++ b/web/src/settings/_SettingsSidebar.scss
@@ -54,6 +54,29 @@
             background-color: rgba(42, 58, 81, 0.7);
         }
 
+        &-action {
+            border-top: 1px solid #2b3750;
+            padding: 0.5rem;
+            text-align: center;
+
+            &-button {
+                background-color: #2b3750;
+                color: #93a9c8;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            &-button:hover {
+                background-color: rgba(42, 58, 81, 0.7);
+                color: #f2f4f8;
+            }
+
+            &-icon {
+                margin-right: 0.125rem;
+            }
+        }
+
         &-icon {
             margin-right: 0.5rem;
             margin-left: 0.5rem;
@@ -95,22 +118,6 @@
         &-row {
             overflow: hidden;
             text-overflow: ellipsis;
-        }
-    }
-
-    &__download-editor {
-        border-top: 1px solid #2b3750;
-        padding: 0.5rem;
-        text-align: center;
-
-        &-button {
-            background-color: #2b3750;
-            color: #93a9c8;
-        }
-
-        &-button:hover {
-            background-color: rgba(42, 58, 81, 0.7);
-            color: #f2f4f8;
         }
     }
 }
